Closed Bug 317961 Opened 20 years ago Closed 20 years ago

[FIX]Letter frames not recovered when display:none content appended/inserted

Categories

(Core :: Layout, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(2 files, 1 obsolete file)

See summary.
Attached patch Fix (obsolete) — Splinter Review
Recover even if we didn't create new frames.
Attachment #204323 - Flags: superreview?(dbaron)
Attachment #204323 - Flags: review?(dbaron)
Do you have a testcase for what this breaks?
Er... yes. I just forgot to attach it. Coming right up.
Attached file Testcase
Attachment #204323 - Flags: superreview?(dbaron)
Attachment #204323 - Flags: superreview+
Attachment #204323 - Flags: review?(dbaron)
Attachment #204323 - Flags: review+
Attached patch Updated to tipSplinter Review
Attachment #204323 - Attachment is obsolete: true
Fixed.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: