Recover letter frames even if we didn't construct anything new.  Bug 317961, r+sr=dbaron